--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     </div>
                         <div class="card">
                             <img src="php-logo.png" alt="html" height="60px" width="60px">
-                            <h2>Structured Query Language</h2>
+                            <h2>Hypertext Preprocessor</h2>
                             <p>PHP is an open-source, server-side programming language that can be used to create websites, applications, customer relationship management systems and more.</p>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
